--- a/k-9-main/app/ui/legacy/src/main/res/values/strings.xml
+++ b/k-9-main/app/ui/legacy/src/main/res/values/strings.xml
@@ -130,6 +130,7 @@ Please submit bug reports, contribute new features and ask questions at
     <string name="new_messages_title">New messages</string>
     <string name="preferences_action">Settings</string>
     <string name="folders_action">Manage folders</string>
+    <string name="generate_key_action">Generate key</string>
     <string name="account_settings_action">Account settings</string>
     <string name="remove_account_action">Remove account</string>
 
